tests/ui/byte_pool_read_storage.stderr
error[E0502]: cannot borrow `storage` as immutable because it is also borrowed as mutable
  --> tests/ui/byte_pool_read_storage.rs:14:17
   |
13 |     BytePool::create(pool.into_ref(), &mut storage, &Default::default()).unwrap();
   |                                       ------------ mutable borrow occurs here
14 |     use_storage(&storage);
   |                 ^^^^^^^^ immutable borrow occurs here
15 | }
   | - mutable borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `BytePoolContext`
